[#30] Rename problems to conditions
opentrials/opentrials#30
